--- a/blog/develop/博客模板.md
+++ b/blog/develop/博客模板.md
@@ -3,6 +3,7 @@ title: 标题
 description: 摘要
 slug: server-and-domain-beian
 tags: [blog]
+keywords: [develop, cloud]
 date: 2025-01-10
 draft: true
 ---
