--- a/blog/life/第一次跨海游泳.md
+++ b/blog/life/第一次跨海游泳.md
@@ -1,2 +1,21 @@
-# 第一次跨海游泳
+---
+title: 第一次跨海游泳
+description: 摘要
+slug: first-cross-country-swimming
+tags: [blog]
+keywords: [develop, cloud]
+date: 2025-01-10
+draft: true
+---
+
 这是一篇关于游泳的博客
+<!-- truncate -->
+## 背景
+
+## 方案
+
+## 实现
+
+## 注意点
+
+## 总结
