--- a/blog/develop/LLM/服务器部署项目.md
+++ b/blog/develop/LLM/服务器部署项目.md
@@ -17,11 +17,12 @@ date: 2026-01-21
 ## 2.执行
 ### 2.1 登录服务器
 ### 2.3 克隆项目代码到服务器
-在内存比较小的服务器（如1GB或2GB内存）中运行`npm install`,`npm run build`经常容易导致内存不足的问题然后系统挂掉。使用github actions可以避免这个问题。它的方案简单来说就是：
+:::tip
+如果你已经知道如何将打包文件dist或build塞进服务器，以下内容将全是废话
+:::
+将打包文件放到服务器的方案有多种，如在服务器中 `/var/www/projects`目录下克隆-安装-打包项目，或是直接在该目录地址下放项目发包文件都是可以的，然而在内存比较小的服务器（如1GB或2GB内存）中运行`npm run build`经常容易因为内存不足的原因导致系统挂掉。
+解决方案：穷鬼方案（钱要花在刀刃上）`Github Actions`：每次提交代码时，github自动将你的项目代码打包并推送到一个deploy分支，你只需要在服务器上克隆那个deploy分支即可。具体步骤：
 1. 在项目根目录创建 `.github/workflows/deploy.yml` 文件。
-2. 配置它在每次推送代码时，自动帮你编译并把build文件夹推送到一个gh-pages或deploy分支。
-3. 服务器操作：你只需要在服务器上克隆那个deploy分支即可。
-
 ```yml
 name: Deploy Blog
 
@@ -48,3 +49,10 @@ jobs:
           folder: build    # 打包产物所在的目录
           branch: deploy   # 将产物推送到这个分支
 ```
+2. 配置它在每次推送代码时，自动帮你编译并把build文件夹推送到一个gh-pages或deploy分支。第一次提交`git push origin main`时,你会看到github仓库中Actions中会自动运行一次部署流程。如果你失败了，大概是因为权限问题，这时候你需要去开启权限：选择setting->actions（general）->workflow permissions->read and write permissions->save。再回到actions重跑。
+3. 服务器操作：你只需要在服务器上克隆那个deploy分支即可。
+
+各种问题：
+1.端口被占用
+2.防火墙
+3.地址转发错误
