--- a/blog/develop/搭建一个个人博客网站.md
+++ b/blog/develop/搭建一个个人博客网站.md
@@ -79,3 +79,13 @@ jobs:
 
 
 
+
+3. 一个小提醒（关于续期）
+因为我们这次是被迫使用了 DNS 手动验证模式（--manual），这意味着 3 个月后证书到期时，certbot renew 自动续期命令无法自动完成（因为它没法自动去改你的域名解析记录）。
+
+你需要记个日历提醒（比如 2026年4月10日左右），到时候再运行一遍今天这个命令：
+sudo certbot certonly --manual --preferred-challenges dns -d lastwhisper.online -d www.lastwhisper.online
+
+
+
+cat /var/log/blog_deploy.log
