--- a/blog/develop/搭建一个个人博客网站.md
+++ b/blog/develop/搭建一个个人博客网站.md
@@ -89,3 +89,5 @@ sudo certbot certonly --manual --preferred-challenges dns -d lastwhisper.online 
 
 
 cat /var/log/blog_deploy.log
+手动跑脚本
+/root/deploy_blog.sh
