--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -11,16 +11,27 @@ import Comment from '@site/src/components/Comment'
 <div className="tw-flex tw-flex-col tw-items-center tw-justify-center tw-py-16 tw-px-4">
 
 # 👋 你好! 我是 xiao
-关于生活积极向上，关于编程唧唧歪歪
-<div className='tw-w-1/2'> 
-**关于我：{new Date().getFullYear() - 2020}年+** 前端程序员，喜欢健身，跑步，游泳，冲浪，喝酒吹牛逼。你问我编程我可能支支吾吾，但你要问我什么好玩我可能滔滔不绝。
+<div className='tw-w-full md:tw-w-2/3'> 
+**关于我：{new Date().getFullYear() - 2020}年+** 前端程序员，喜欢健身，跑步，游泳，冲浪，喝酒吹牛逼。你问我编程知识我可能支支吾吾，但你要问我什么好玩我可能滔滔不绝。
 </div>
 
-<div className='tw-w-1/2'>
-**关于本站：** 建站初衷说来惭愧，就是想换份有意思的工作。写点内耗的编程文章，放几个项目。网站弄好后，我直面内心，发现我还有一个爱好，那就是爱和有意思的人吹牛逼，
-所以我希望大伙儿可以畅所欲言，调侃也好，发泄也罢。**让兄弟知道你tm也不简单🐶**
+<div className='tw-w-full md:tw-w-2/3'> 
+**关于技术：** AI的崛起对于我来说是一件好事，以前我总是苦恼于自己没耐心全面的掌握一门技术，更多的兴趣在创造和解决问题上，大部分技能都是在做的过程中学的。所以我特别讨厌八股文的面试方式（可能是我技术面太窄），
+现在AI补齐了我的短板，我可以花更多的心思在探索和解决问题上。我们都像”钢铁侠“一样拥有了一个自己的“星期五”。
 </div>
-## 🐶🐶🐶 
+
+<div className='tw-w-full md:tw-w-2/3'>
+**关于本站：** 建站初衷是为了新工作准备，也是为了更好的了解和记录自己。我经常会有很多奇特的想法，加上常年阅读的习惯，所以在我的脑子里总是有很多问题和想法需要找到一个释放的窗口，
+希望大家多多交流🦹🏼，展示出语言的艺术。
+</div>
+
+<div className="tw-hidden md:tw-block">
+[![My Skills](https://skillicons.dev/icons?i=ts,aiscript,nodejs,tailwind,vue,react,nextjs,webpack,nginx,docker,vscode,vercel,ps,pr)](https://skillicons.dev)
+</div>
+<div className="tw-block md:tw-hidden">
+[![My Skills](https://skillicons.dev/icons?i=ts,aiscript,nodejs,tailwind,vue,react,nextjs,webpack,nginx,docker,vscode,vercel,ps,pr&perline=7)](https://skillicons.dev)
+</div>
+# 🤠🤠🤠 
 <p>
 当前坐标 📍：**深圳**，欢迎交流，掰手腕💪赢我请你吃饭
 </p>
@@ -58,6 +69,5 @@ import Comment from '@site/src/components/Comment'
     <Icon icon="ri:bilibili-line" className="tw-w-6 tw-h-6 tw-text-gray-600 dark:tw-text-gray-300 group-hover:tw-text-blue-500 dark:group-hover:tw-text-blue-400" />
   </a>
 </div>
-
 <Comment />
 </div>
