--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -16,8 +16,7 @@ import Comment from '@site/src/components/Comment'
 </div>
 
 <div className='tw-w-full md:tw-w-2/3'> 
-**关于技术：** AI的崛起对于我来说是一件好事，以前我总是苦恼于自己没耐心全面的掌握一门技术，更多的兴趣在创造和解决问题上，大部分技能都是在做的过程中学的。所以我特别讨厌八股文的面试方式（可能是我技术面太窄），
-现在AI补齐了我的短板，我可以花更多的心思在探索和解决问题上。我们都像”钢铁侠“一样拥有了一个自己的“星期五”。
+**关于技术：** AI的崛起对于我来说是一件好事，以前我总是苦恼于自己没耐心全面的掌握一门技术，更多的兴趣在创造和解决问题上，现在AI补齐了我的短板，我可以花更多的心思在探索和解决问题上。我们都像钢铁侠一样拥有了一个自己的“星期五”。
 </div>
 
 <div className='tw-w-full md:tw-w-2/3'>
