--- a/blog/develop/搭建一个个人博客网站.md
+++ b/blog/develop/搭建一个个人博客网站.md
@@ -4,6 +4,7 @@ slug: server-deploy-project
 tags: [技术,服务器,部署]
 keywords: [服务器,部署,项目]
 date: 2026-01-21
+draft: true
 ---
 <!-- truncate -->
 > 关于搭建自己的网站这件事，在25年初的时候就在计划了，期间尝试过很多次：学nextjs，自己设计，部署到vercel，做到最后都不了了之，想得太多，想得太花，最后发现自己啥也不会。
