--- a/blog/life/第一次跨海游泳/第一次跨海游泳.md
+++ b/blog/life/第一次跨海游泳/第一次跨海游泳.md
@@ -1,11 +1,11 @@
 ---
-title: 第三次跨海游泳
+title: 关于游泳这件事
 description: 摘要
-slug: third-cross-country-swimming
-tags: [blog]
-keywords: [develop, cloud]
+slug: 第一次跨海游泳
+tags: [生活, 游泳]
+keywords: [you, cloud]
+image: ./swimming-bg.png
 date: 2025-01-10
-draft: true
 ---
 
 这是一篇关于游泳的博客
