--- a/blog/学游泳/学游泳.md
+++ b/blog/学游泳/学游泳.md
@@ -1,11 +1,11 @@
 ---
-title: 第一次跨海游泳
+title: 学游泳
 description: 摘要
-slug: first-cross-country-swimming
-tags: [blog]
-keywords: [develop, cloud]
+slug: 学游泳
+tags: [生活, 游泳]
+keywords: [you, cloud]
+image: ./swimming-bg.png
 date: 2025-01-10
-draft: true
 ---
 
 这是一篇关于游泳的博客
