fix render background-img

--- a/blog/life/第一次跨海游泳/第一次跨海游泳.md
+++ b/blog/life/第一次跨海游泳/第一次跨海游泳.md
@@ -4,7 +4,7 @@ description: 摘要
 slug: 第一次跨海游泳
 tags: [生活, 游泳]
 keywords: [you, cloud]
-image: ./swimming-bg.png
+image: /img/blog/life/first-sea-swim/swimming-bg.png
 date: 2025-01-10
 ---
 
