--- a/blog/学游泳/学游泳.md
+++ b/blog/学游泳/学游泳.md
@@ -4,7 +4,7 @@ description: 摘要
 slug: 学游泳
 tags: [生活, 游泳]
 keywords: [you, cloud]
-image: ./swimming-bg.png
+image: /img/blog/learn-swimming/swimming-bg.png
 date: 2025-01-10
 ---
 
