--- a/blog/搭建一个个人博客网站.md
+++ b/blog/搭建一个个人博客网站.md
@@ -1,5 +1,5 @@
 ---
-title: 搭建一个个人网站
+title: 搭建个人网站
 slug: server-deploy-project
 tags: [技术,服务器,部署]
 keywords: [服务器,部署,项目]
@@ -7,16 +7,29 @@ date: 2026-01-21
 draft: true
 ---
 <!-- truncate -->
-> 关于搭建自己的网站这件事，在25年初的时候就在计划了，期间尝试过很多次：学nextjs，自己设计，部署到vercel，做到最后都不了了之，想得太多，想得太花，最后发现自己啥也不会。
-最后我想通了，我TM本来就不他妈爱搞什么jbcb开发编程，只是为了生活，为了份工作，为了吃口饭搭建这个b抽象网站。唉，有内容总比什么都没有强吧，那就TM赶紧开始搞吧。
+> 关于搭建个人网站这件事，24年时便在计划了，至于原因：大部分是焦虑，想找到一个技术的突破口。还有一个重要的原因是想给未来留下一些回忆，坦诚的记录自己。
 
-:::danger 温馨提示
-如果你天真的以为看完这篇内容，跟着敲敲代码，打开浏览器输入地址就能进入你的网站，你以为编程这件事就TM像你的人生一样一帆风顺，没有难度时。那我想告诉你的是：你TM还真看对了，你兄弟我是真的好兄弟，
-把路上的坑全给你踩了，你就TM能成功搭建一个个人网站了。
+## 开始前 
+一直以来，编程对于我来说都只是为了有口饭吃，我对生活的热情远远大于编程。身边很多朋友也认为我不是个正经的程序员。只会单一的技术栈，想要做一个个人网站对于我来说很有挑战，因此在这个过程中
+踩了很多坑，也浪费了很多时间。最后完美的诠释了：为了一碟醋包了顿饺子。被动学了一脑子的新知识。这篇文章记录的是踩过的坑。**如果你也想搭建一个网站，以下内容我愿称之为“轮椅”教学。**
+
+:::success 温馨提示
+如果你只想搭建一个网站，你完全没必要从头看到尾
 :::
-### 开始折磨
-网站是docusaurus搭建的，写页面你总得自己做吧，总得吃点苦吧？
 
+### 一. 天崩开局
+有了搭建网站的想法后，开始联想到炫酷的页面，最新的技术栈，交互体验，后端。最后发现自己除了一点前端的知识，啥也不会。至此陷入焦虑与迷茫。于是开始以下尝试：
+#### 1. nextjs 搭建个人博客
+就反正啥也不会，跟着视频**干中学**呗～
+<img src="/img/blog/build-personal-website/ganzhongxue.png" alt="无法加载" width="500" />
+youtube找了个视频
+
+
+#### 2. 自己设计个人博客
+#### 3. 差点把自己折腾没了
+### 二. 偶然刷到的博客网站
+### 三. 我悟了，适合自己的才是最好的
+### 四. 最后：这一刻你得到了什么教训
 
 
 
