add comment and blog

--- a/src/pages/project/blog-design.mdx
+++ b/src/pages/project/blog-design.mdx
@@ -7,6 +7,7 @@ hide_table_of_contents: false
 import { Icon } from "@iconify/react";
 import useBaseUrl from "@docusaurus/useBaseUrl";
 import ImagePreview from "@site/src/components/ImagePreview";
+import Comment from "@site/src/components/Comment";
 
 # 个人博客 - 隻恶  
 
@@ -81,4 +82,6 @@ module.exports = {
 
 ## 🍋 后续规划
 由于时间有限，当前只搭建了一个毛坯，离我心中的个人网站相差相差还挺大的。后续会持续更新模块，内容文章也会持续更新。。。
+
+<Comment />
 
