--- a/src/pages/project/finance-copilot-web.mdx
+++ b/src/pages/project/finance-copilot-web.mdx
@@ -7,6 +7,7 @@ hide_table_of_contents: false
 import { Icon } from "@iconify/react";
 import useBaseUrl from "@docusaurus/useBaseUrl";
 import ImagePreview from "@site/src/components/ImagePreview";
+import Comment from "@site/src/components/Comment";
 
 # AI 智能财报录入介绍
 
@@ -77,3 +78,5 @@ import ImagePreview from "@site/src/components/ImagePreview";
   <ImagePreview src={useBaseUrl("/projects/finance-copilot-web/checkreport.png")} alt="Home Page" className="tw-w-full tw-h-auto tw-object-cover" />
   <p className="tw-p-2 tw-text-center tw-text-sm tw-text-gray-500">财报校验</p>
 </div>
+
+<Comment />
