--- a/blog/搭建一个个人博客网站.md
+++ b/blog/搭建一个个人博客网站.md
@@ -4,8 +4,12 @@ slug: server-deploy-project
 tags: [技术,服务器,部署]
 keywords: [服务器,部署,项目]
 date: 2026-01-21
+image: /img/blog/build-personal-website/personal.png
 ---
 <!-- truncate -->
+:::danger 提醒
+最近一直在对网站内容进行优化，该博客正在不断完善中。
+:::
 > 关于搭建个人网站这件事，24年时便在计划了，至于原因：大部分是焦虑，想找到一个技术的突破口。还有一个重要的原因是想给未来留下一些回忆，坦诚的记录自己。
 
 ## 开始前 
