--- a/blog/搭建一个个人博客网站.md
+++ b/blog/搭建一个个人博客网站.md
@@ -1,5 +1,5 @@
 ---
-title: 搭建个人网站
+title: 搭建个人网站中的总结
 slug: server-deploy-project
 tags: [技术,服务器,部署]
 keywords: [服务器,部署,项目]
@@ -7,104 +7,110 @@ date: 2026-01-21
 image: /img/blog/build-personal-website/personal.png
 ---
 <!-- truncate -->
-:::danger 提醒
-最近一直在对网站内容进行优化，该博客正在不断完善中。
-:::
-> 关于搭建个人网站这件事，24年时便在计划了，至于原因：大部分是焦虑，想找到一个技术的突破口。还有一个重要的原因是想给未来留下一些回忆，坦诚的记录自己。
 
-## 开始前 
-一直以来，编程对于我来说都只是为了有口饭吃，我对生活的热情远远大于编程。身边很多朋友也认为我不是个正经的程序员。只会单一的技术栈，想要做一个个人网站对于我来说很有挑战，因此在这个过程中
-踩了很多坑，也浪费了很多时间。最后完美的诠释了：为了一碟醋包了顿饺子。被动学了一脑子的新知识。这篇文章记录的是踩过的坑。**如果你也想搭建一个网站，以下内容我愿称之为“轮椅”教学。**
+> 以下是在我搭建网站过程中得到的一些教训
 
-:::success 温馨提示
-如果你只想搭建一个网站，你完全没必要从头看到尾
-:::
-
-### 一. 天崩开局
-有了搭建网站的想法后，开始联想到炫酷的页面，最新的技术栈，交互体验，后端。最后发现自己除了一点前端的知识，啥也不会。至此陷入焦虑与迷茫。于是开始以下尝试：
-#### 1. nextjs 搭建个人博客
-就反正啥也不会，跟着视频**干中学**呗～
+### 一. 有的技术不会
+别学会了再做，等你学会了，你又没兴趣了。AI 也需要用起来。
 <img src="/img/blog/build-personal-website/ganzhongxue.png" alt="无法加载" width="500" />
-youtube找了个视频
 
+### 二. 想清楚自己要的是什么
+前期我陷入了追求完美的误区，想要炫酷的UI设计，好的性能，前后端分离。
 
-#### 2. 自己设计个人博客
-#### 3. 差点把自己折腾没了
-### 二. 偶然刷到的博客网站
-### 三. 我悟了，适合自己的才是最好的
-### 四. 最后：这一刻你得到了什么教训
+到最后我发现，个人网站内容才是最重要的。一个作品是否有价值，取决于它是否能为用户提供有价值的信息或服务。而不是它技术有多牛逼 🙃。
 
+### 三. 快速搭建
+我搭建网站的目的是：积累自己的博客内容，放作品，被动求职。针对我的需求，我发现暂时没必要有后端，只需要一个静态网站即可。用 `typescript + react + docusaurus + tailwindcss` 可以迅速开发搭建。
 
+**开发阶段**：在 [docusaurus 官方文档](https://docusaurus.io/zh-CN/docs/installation)中安装。通过 AI 快速了解 `docusaurus` 的基本使用方法，辅助开发搭建出一个简单的博客网站。
 
+**部署阶段**：此阶段你需要准备 `静态网站文件`，`服务器`，`域名`，后面会详细介绍。
 
+**持续迭代阶段**：当整个流程跑通后，页面设计，功能设计，网页性能，文章内容等，开始进行大刀阔斧的迭代。
 
-## 1.步骤
- - 登录服务器
- - 安装必要的软件（如Git、Node.js等）
- - 克隆项目代码到服务器
- - 安装项目依赖
- - 配置项目环境变量
- - 启动项目
+**维护阶段**：网站搭建完成后，需要定期维护，包括更新内容，修复bug，优化性能等。
 
-## 2.执行
-### 2.1 登录服务器
-### 2.3 克隆项目代码到服务器
-:::tip
-如果你已经知道如何将打包文件dist或build塞进服务器，以下内容将全是废话
+:::info 我的困境
+道理大家都懂，但在实践后我的问题在于想得太多。但这对于“开头”往往不是一个好事。找准痛点，解决核心问题永远是最优先的。在这件事中，先把服务搭建起来让用户可以访问，才是最重要的。当然这只是我的困境。
 :::
-将打包文件放到服务器的方案有多种，如在服务器中 `/var/www/projects`目录下克隆-安装-打包项目，或是直接在该目录地址下放项目发包文件都是可以的，然而在内存比较小的服务器（如1GB或2GB内存）中运行`npm run build`经常容易因为内存不足的原因导致系统挂掉。
-解决方案：穷鬼方案（钱要花在刀刃上）`Github Actions`：每次提交代码时，github自动将你的项目代码打包并推送到一个deploy分支，你只需要在服务器上克隆那个deploy分支即可。具体步骤：
-1. 在项目根目录创建 `.github/workflows/deploy.yml` 文件。
-```yml
-name: Deploy Blog
 
-on:
-  push:
-    branches:
-      - main  # 当你向 main 分支推送代码时触发
+### 四. 部署项目
+需要准备：服务器，域名，静态网站文件。详细步骤问 `AI`
+#### 4.1 最快最优解
+1. 项目提交到 [github](https://github.com/) 仓库。
+2. 使用 [vercel](https://vercel.com/) 部署项目。
+3. 配置 DNS，将域名指向 vercel 提供的 IP 地址。在域名注册商的 DNS 管理页面中添加一个 A 记录，将域名指向 vercel 提供的 IP 地址。再到 vercel 项目设置中，将域名添加到项目的域名列表中。详细步骤问AI。
 
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+#### 4.2 自有服务器
+:::info 自有服务器部署项目需要注意的问题
+域名绑定国内服务器需要备案，备案过程比较复杂，需要提交相关文件到国家备案管理部门审核。备案完成后，就可以将域名指向服务器的 IP 地址了。不建议白嫖玩家前期使用。
 
-      - name: Install and Build
-        run: |
-          npm install
-          npm run build  # 这里执行打包命令，生成 build 文件夹
+以下步骤是在部署过程中遇到的麻烦，你在做的时候大概率还是会遇到这些坑，建议配合AI完成。
+:::
 
-      - name: Deploy to Branch
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: build    # 打包产物所在的目录
-          branch: deploy   # 将产物推送到这个分支
-```
-2. 配置它在每次推送代码时，自动帮你编译并把build文件夹推送到一个gh-pages或deploy分支。第一次提交`git push origin main`时,你会看到github仓库中Actions中会自动运行一次部署流程。如果你失败了，大概是因为权限问题，这时候你需要去开启权限：选择setting->actions（general）->workflow permissions->read and write permissions->save。再回到actions重跑。
-3. 服务器操作：你只需要在服务器上克隆那个deploy分支即可。
+1. 项目提交到 [github](https://github.com/) 仓库。
+2. 部署服务器：
+  - 使用SSH客户端（如PuTTY、Termius等）登录服务器。
+  - 安装必要的软件：
+    - 安装Git：`sudo apt install git`
+    - 安装Node.js：`sudo apt install nodejs npm`
+    - nginx：`sudo apt install nginx`
+  - 在目录 `/var/www/projects` 下克隆项目代码：`git clone https://github.com/yourusername/yourproject.git`
+  - 进入项目目录：`cd yourproject`
+  - 安装项目依赖：`npm install`
+  - 打包项目：`npm run build`
+  - nginx 配置：
+    - 配置 nginx：编辑 `/etc/nginx/nginx.conf` 文件，添加以下内容：
+    ```nginx
+    server {
+        listen 80;
+        server_name yourdomain.com;
 
-各种问题：
-1.端口被占用
-2.防火墙
-3.地址转发错误
+        location / {
+            proxy_pass http://localhost:3000;  # 假设你的应用监听在 3000 端口
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+    ```
+    - 域名备案：
+      - 确保域名已备案，否则无法通过 HTTPS 访问。 
+    - 通过DNS的方式申请https证书：
+      - 安装 certbot：`sudo apt install certbot python3-certbot-nginx`
+      - 申请证书：`sudo certbot --nginx -d yourdomain.com`
+      - 配置 nginx：编辑 `/etc/nginx/nginx.conf` 文件，添加以下内容：
+    ```nginx
+    server {
+        listen 443 ssl;
+        server_name yourdomain.com;
+        ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    }
+    ```
+    - 申请证书后，将证书文件复制到 nginx 配置目录：
+      - `sudo cp /etc/letsencrypt/live/yourdomain.com/fullchain.pem /etc/letsencrypt/live/yourdomain.com/privkey.pem /etc/nginx/ssl/`
+    - 域名新增记录：
+      - 在域名注册商的 DNS 管理页面中添加一个 A 记录，将域名指向服务器的 IP 地址。
+      - 添加一个 CNAME 记录，将 www 指向 yourdomain.com。
+    
+  - 服务器厂商配置：
+    - 确保服务器的防火墙允许 HTTP（80）和 HTTPS（443）流量。
+    - 配置防火墙规则，允许流量通过。
+  
 
-### 博客部署遇到的问题以及解决
-#### 1.项目问题
-站点是基于 Docusaurus 的静态网站。Docusaurus + React + TypeScript
-1. 部署到服务器后，网页中的图片加载不出来
-
-
-
-
-3. 一个小提醒（关于续期）
+:::info 提醒
 因为我们这次是被迫使用了 DNS 手动验证模式（--manual），这意味着 3 个月后证书到期时，certbot renew 自动续期命令无法自动完成（因为它没法自动去改你的域名解析记录）。
 
-你需要记个日历提醒（比如 2026年4月10日左右），到时候再运行一遍今天这个命令：
+你需要记个日历提醒，到时候再运行一遍今天这个命令：
 sudo certbot certonly --manual --preferred-challenges dns -d lastwhisper.online -d www.lastwhisper.online
+:::
 
-
-
-cat /var/log/blog_deploy.log
-手动跑脚本
-/root/deploy_blog.sh
+- 其他建议:
+  - 服务器资源有限时，推荐使用github action自动部署。详细步骤问AI。
+### 五. 最后 
+持续迭代吧 🙃
