--- a/blog/提示词.md
+++ b/blog/提示词.md
@@ -7,3 +7,27 @@ date: 2025-10-21
 draft: true
 ---
 <!-- truncate -->
+:::success 提示
+提示词是LLM的输入，也是输出的一部分。好的提示词可以让LLM生成更好的输出。
+你可以从以下链接中获得一些启发：[GPTs](https://github.com/linexjlin/GPTs)，[PromptBase](https://promptbase.com/)，[prompts.chat](https://github.com/f/prompts.chat)，[LangSmith](https://smith.langchain.com/)
+:::
+## 1. 提示工程
+提示工程也叫【指令工程】：prompt 最早出现在2018年。2019年，GPT-2 第一个在 LLM 中引入了prompt。大模型只接受一种输入，那就是prompt，大模型相关的工程工作，都是围绕prompt展开的，提示工程【门槛低，天花板高】。
+
+说白了 LLM 是一个 M，提示词是一个 S。
+
+牛逼的提示词：指令具体，信息丰富，减少歧义。
+
+## 2. 提示词的结构设计
+典型结构：
+```
+角色：给AI定义一个最匹配任务的角色，比如：【你是一位软件工程师】
+指示：对任务进行描述
+上下文：给出与任务相关的其他背景信息（尤其是在多轮交互中）
+例子：举个例子，学术中称为Few-Shot Learning 或 In-Context Learning；这对对输出正确性有很大帮助
+输入：任务的输入信息，在提示词中明确的标识出输入
+输出：输出的风格，格式描述，引导只输出想要的信息，以及方便后续继模块自动解析模型的输出结果，比如（json，xml）
+```
+大模型对 prompt 开头和结尾的内容更敏感。
+[为什么？](https://www.datalearner.com/blog/1051688829605194)
+[为什么？](https://arxiv.org/abs/2307.03172)
