--- a/blog/大模型基础学习.md
+++ b/blog/大模型基础学习.md
@@ -1,7 +1,7 @@
 ---
 title: 大模型基础学习
 slug: llm-base-learning
-tags: [技术,LLM]
+tags: [技术,LLM,基础]
 keywords: [LLM,基础学习]
 date: 2025-05-19
 image: /img/blog/llm-base-learning/image.png
